[package]
name = "reimg"
description = "A simple CLI tool to resize images."
version = "0.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/ije/reimg"
exclude = [".github/*", ".gitignore", "rustfmt.toml", "test/*"]

[[test]]
name = "reimg"
path = "test/test.rs"

[dependencies]
image = { version = "0.25.8", features = ["jpeg", "png", "webp", "avif", "gif", "ico", "bmp", "tiff"] }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
libwebp-sys = { version = "0.14.0", default-features = false, features = ["std", "parallel", "avx2", "sse41", "neon", "generate-bindings"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
libwebp-sys = { version = "0.14.0", default-features = false, features = ["std", "parallel", "generate-bindings"] }

[profile.release]
panic = "abort"
strip = "symbols"
codegen-units = 1
opt-level = 3
lto = true
debug = false
incremental = false
