[package]
name = "reimg"
description = "A simple CLI tool to resize images."
version = "0.0.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/ije/reimg"
exclude = [".github/*", ".gitignore", "rustfmt.toml", "test/*"]

[[test]]
name = "reimg"
path = "test/test.rs"

[dependencies]
base64 = "0.22.1"
image = { version = "0.25.9", features = ["jpeg", "png", "avif", "gif", "ico", "bmp", "tiff"] }

[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
libwebp-sys = { version = "0.14.2", default-features = false, features = [ "parallel", "neon", "avx2", "sse41" ] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
libwebp-sys = { version = "0.14.2", default-features = false, features = [ "parallel"] }

[profile.release]
lto = true          # Enable link-time optimization
opt-level = 'z'     # Optimize for size, even if it means less performance
codegen-units = 1   # Maximize size reduction optimizations (increases compile time)
strip = "debuginfo" # Automatically strip debug symbols from the binary
panic = "abort"     # Abort on panic (removes unwinding code)

